test_programs/compile_failure/comptime_negate_with_overflow/src/main.nr
fn main() {
    comptime {
        let i: i8 = -(128 as i8);
    }

    comptime {
        let i: u8 = 1;
        let _ = -i;
    }
}
